# FAA-Gazebo-Environment

./: .gitignore  .gitmodules  README.md
DATA/DAA_Flights/Test with 2 UAVs dropout/Encounter_0/states_data/: airplane_2_states.csv  ownship_states.csv
DATA/DAA_Flights/Test with 2 UAVs dropout/Encounter_1/states_data/: airplane_2_states.csv  ownship_states.csv
DATA/DAA_Flights/Test with 2 UAVs dropout/Encounter_2/states_data/: airplane_2_states.csv  ownship_states.csv
DATA/DAA_Flights/Test with 2 UAVs dropout/Encounter_3/states_data/: airplane_2_states.csv  ownship_states.csv
DATA/DAA_Flights/Test with 2 UAVs/Encounter_0/states_data/: airplane_2_states.csv  ownship_states.csv
DATA/DAA_Flights/Test with 2 UAVs/Encounter_1/states_data/: airplane_2_states.csv  ownship_states.csv
DATA/DAA_Flights/Test with 2 UAVs/Encounter_2/states_data/: airplane_2_states.csv  ownship_states.csv
DATA/DAA_Flights/Test with 2 UAVs/Encounter_3/states_data/: airplane_2_states.csv  ownship_states.csv
DATA/DAA_Flights/Test with 3 UAVs/Encounter_0/states_data/: airplane_2_states.csv  airplane_3_states.csv  ownship_states.csv
DATA/DAA_Flights/Test with 3 UAVs/Encounter_1/states_data/: airplane_2_states.csv  airplane_3_states.csv  ownship_states.csv
DATA/DAA_Flights/Test with 3 UAVs/Encounter_2/states_data/: airplane_2_states.csv  airplane_3_states.csv  ownship_states.csv
DATA/DAA_Flights/Test with 3 UAVs/Encounter_3/states_data/: airplane_2_states.csv  airplane_3_states.csv  ownship_states.csv
src/airplane_gazebo_plugin/: CMakeLists.txt  package.xml
src/airplane_gazebo_plugin/msg/: AdsbData.msg  AirplaneKineticModelInfo.msg  AvoidanceStates.msg
src/airplane_gazebo_plugin/src/: adsb_sensor.cpp  airplane_3d_movement_gazebo_plugin.cpp  airplane_waypoint_follower.cpp  geometric_wp_detect_and_avoidance.cpp
src/airplane_gazebo_plugin/trajectories_final_report/: traj_task3.py
src/airplane_recognition/: setup.py
src/airplane_recognition/airplane_recognition/: MIT_Trajectory_spawner.py  MIT_spawner_and_saver.py  airplane_recog_fov.py  camera_combination.py  camera_combination_first.py  variable_camera_combination.py
src/plane_bringup/: CMakeLists.txt
src/plane_bringup/AirplaneCharacteristics/: Mat2Jason.py  airplane_3.json  airplane_3.mat  airplane_4.json  airplane_4.mat
src/plane_bringup/Detection_encounters/: Detection_process.csv  detection_summary.py  encounters_tcpa.json
src/plane_bringup/launch/: Geometric_DAA_simulation.launch.py  MIT_Trajectory_follower.launch.py  MIT_one_camera_recognition.launch.py  MIT_two_airplanes_with_recog.launch.py  MIT_variable_cam_Trajectory_follower.launch.py  Past_Aiplane_DAA_system.launch.py  airplane.launch.py  airplane.launch_matlab.py  main_two_airplanes.launch.py  main_two_airplanes_dist_recog.launch.py  main_two_airplanes_with_recog.launch.py
src/plane_description/rviz/: Camera360.rviz
src/plane_description/urdf/Airplane/: airplane_gazebo.xacro
src/plane_description/urdf/Airplane_Scaled/: airplane_gazebo.xacro
src/plane_description/urdf/Airplane_variable_Camera/: airplane.xacro  airplane_gazebo.xacro  main_plane.xacro
src/plane_description/urdf/Airplane_with_360Camera/: airplane.xacro  airplane_gazebo.xacro
src/plane_description/urdf/Airplane_with_Camera/: airplane_gazebo.xacro
src/plane_follow_exec/: package.xml  setup.cfg  setup.py
src/plane_follow_exec/plane_follow_exec/: daa_simulation.py  mit_encounter_follower.py
